--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "dependencies": {
+    "eslint": "^5.16.0",
+    "global": "^4.3.2",
     "sqlite3": "^4.0.6",
     "underscore": "^1.9.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4"
   }
 }
