--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4"
+  },
+  "scripts": {
+    "build": "npx babel src/a.js --out-file a.js",
+    "go": "casperjs a.js"
   }
 }
